# ai-cage

./: .gitignore  Makefile  Makefile.am  README.md  ai-cage.c  config.json  configure  configure.ac
docs/: configuration.md  environment.md
examples/images/: codex.def  kiro.def
scripts/: codex
specs/001-add-workspaces-config/: .summary.md.swp  data-model.md  plan.md  research.md  spec.md  summary.md  tasks.md  test-results.md
specs/001-add-workspaces-config/checklists/: requirements.md
src/: backend.h  backend_apptainer.c  backend_landlock.c  main.c
